Wrong rounding when moving frames #50148

Closed
opened 2016-12-01 10:32:20 +01:00 by Anna Celarek · 6 comments

When moving frames in the Dope Sheet or Action Editor, the rounding in the info line below the editor is wrong. See the attached screenshot. rounding.jpg

to recreate:

  • insert a keyframe at frame 0 (or any other frame)
  • grab the frame and move it (G) in Dope Sheet or Action Editor
  • observe the info line below the editor:
    It says something like DeltaX: 1.00 (1.9876).
    by this time the actual frame has been moved by 2 frames already.
    The first number in the info line should say 2.00 with proper rounding. At least it should be consistent with the movement of the actual frame.

Blender 2.78 (official 4bb1e22 and daily build 05b181f) on Windows 10.

When moving frames in the Dope Sheet or Action Editor, the rounding in the info line below the editor is wrong. See the attached screenshot. ![rounding.jpg](https://archive.blender.org/developer/F412496/rounding.jpg) to recreate: - insert a keyframe at frame 0 (or any other frame) - grab the frame and move it (G) in Dope Sheet or Action Editor - observe the info line below the editor: It says something like DeltaX: 1.00 (1.9876). by this time the actual frame has been moved by 2 frames already. The first number in the info line should say 2.00 with proper rounding. At least it should be consistent with the movement of the actual frame. Blender 2.78 (official 4bb1e22 and daily build 05b181f) on Windows 10.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AnnaCelarek

Added subscriber: @AnnaCelarek
Member

Added subscriber: @LucaRood-3

Added subscriber: @LucaRood-3
Luca Rood self-assigned this 2016-12-02 00:39:25 +01:00
Member

I can confirm this. The delta values in the header don't properly handle snapping, both in the dope sheet and in the graph editor as well.

I can confirm this. The delta values in the header don't properly handle snapping, both in the dope sheet and in the graph editor as well.

This issue was referenced by ce0db668ec

This issue was referenced by ce0db668ec0410c8b2d41f605e2cf5e608df5082

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50148
No description provided.